	- Fixed trim/rtrim/ltrim: strings that only contain trim-characters are
	  cleared now. This fixes all the 'Unable to split mask "" ..' bugs.
	- portage-2.1 introduced big changes to the depcache-handling, the old
	  cache is no longer removed. Old entries are not removed. But update-eix
	  needs the cache to be ok, thus eix-sync removes the old depcache in
	  /var/cache/edb/dep.

*eix-0.5

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Fixed a small bug regarding -o/-a and atoms with a pattern .. thanks to
	  leonie for bringing this to my attention.
	- Added PROVIDE; bumped db-version
	- Fixing http://bugs.gentoo.org/show_bug.cgi?id=111927
	- Added our own strndup-implementation that will be used for ppc-macos
	  See http://bugs.gentoo.org/show_bug.cgi?id=111912
	- Finally, environment variables can be used to override eixrc-stuff.
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=111865, thanks JeR
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=112776
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=112806
	- Applied patches for scandir, sed, byteorder and regex from
	  http://bugs.gentoo.org/show_bug.cgi?id=111912
	- Fixed some small memory-leaks - valgrind reports one more that leads
	  into the glibc (getpwnam) .. but this is really a leak. See
	  --run-glibc-freeres in valgrind(1).
	- Rewrite BasicVersion (much more efficient) and fixes
	  http://dev.croup.de/proj/eix/ticket/1
	- Fix http://bugs.gentoo.org/show_bug.cgi?id=113735

*eix-0.5_beta

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Formatstring(Conditions): If a "else" was missing, the if-true part was
	  linked to if-false.
	- Changed the arch-part of the dbheader from char[16] to string.
	- Fixed http://bugs.gentoo.org/show_bug.cgi?id=104083 - once again:
	  unsigned int vs. vector::size_type
	- Moved from #define in basicio.h to a namespace io with generic
	  read/write-functions for POD and {read,write}_string for strings.